ajuste de rota pra vercel2

--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,8 @@
       "dest": "/server.js"
     },
     {
-      "handle": "filesystem"
+      "src": "/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
     },
     {
       "src": "/(.*)",
