--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "cd client && npm install && npm run build"
       }
     }
   ],
@@ -19,7 +20,12 @@
       "dest": "/server.js"
     },
     {
-      "handle": "filesystem"
+      "src": "/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|svg|gif))",
+      "dest": "/client/dist/$1"
     },
     {
       "src": "/(.*)",
