--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "node build.js",
+    "build": "cd client && npm install && npm run build && cd ..",
     "dev": "nodemon server.js"
   },
   "keywords": [],
