acho que agora vai

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "build": "cd client && npm install && npm run build && cd ..",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "vercel-build": "cd client && npm install && npm run build && cd .."
   },
   "keywords": [],
   "author": "",
