acho que agora vai2

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm install && npm run build && cd ..",
-  "outputDirectory": "client/dist",
   "builds": [
     {
       "src": "server.js",
@@ -14,12 +12,7 @@
       "dest": "/server.js"
     },
     {
-      "src": "/assets/(.*)",
-      "dest": "/client/dist/assets/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/dist/$1"
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
