--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
