--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "namoromemoria",
+  "name": "site-creator",
   "version": "1.0.0",
-  "description": "Sistema de sites personalizados com pagamento via Mercado Pago",
-  "main": "server.js",
+  "private": true,
   "scripts": {
+    "build": "cd client && npm install && npm run build",
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "verificar-expiracao": "node scripts/verificarExpiracao.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +14,9 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mercadopago": "^2.5.0",
+    "mercadopago": "^1.5.8",
     "mysql2": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +25,6 @@
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 }
