--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "scripts": {
     "build": "cd client && npm install && npm run build",
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "cd client && npm run dev",
-    "install:all": "npm install && cd client && npm install"
+    "install:all": "npm install && cd client && npm install",
+    "postinstall": "cd client && npm install && npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +25,7 @@
     "express": "^4.18.2",
     "mercadopago": "^2.5.0",
     "mysql2": "^3.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "sequelize": "^6.35.1",
-    "styled-components": "^6.1.1"
+    "sequelize": "^6.35.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
