--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "cd client && npm run dev",
-    "install:all": "npm install && cd client && npm install",
-    "postinstall": "cd client && npm install && npm run build"
+    "install:all": "npm install && cd client && npm install"
   },
   "keywords": [],
   "author": "",
