--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://presentenamorados.vercel.app/api/:path*"
+      "destination": "https://seu-backend.vercel.app/api/:path*"
     },
     {
       "source": "/(.*)",
