--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm run build && cd .. && xcopy \"client\\dist\\*\" \"dist\\\" /E /Y",
     "start": "node server.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "cd client && npm run dev",
-    "install:all": "npm install && cd client && npm install"
+    "install:all": "npm install && cd client && npm install",
+    "db:up": "docker-compose up -d",
+    "db:down": "docker-compose down",
+    "db:restart": "docker-compose restart",
+    "db:logs": "docker-compose logs -f mysql",
+    "db:test": "node scripts/test-database.js",
+    "db:reset": "docker-compose down -v && docker-compose up -d",
+    "db:phpmyadmin": "echo 'Acesse http://localhost:8080 para o phpMyAdmin'"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +26,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^11.9.1",
     "mercadopago": "^2.5.0",
     "mysql2": "^3.6.5",
     "react": "^18.2.0",
