--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "site-creator",
+  "name": "lovio",
   "version": "1.0.0",
-  "private": true,
+  "description": "Sistema para criação de sites personalizados de presente",
+  "main": "server.js",
   "scripts": {
-    "build": "cd client && npm install && npm run build && cd .. && xcopy \"client\\dist\\*\" \"dist\\\" /E /Y",
     "start": "node server.js",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "cd client && npm run dev",
+    "build": "cd client && npm run build",
     "install:all": "npm install && cd client && npm install",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "db:restart": "docker-compose restart",
-    "db:logs": "docker-compose logs -f mysql",
+    "db:logs": "docker-compose logs -f",
     "db:test": "node scripts/test-database.js",
-    "db:reset": "docker-compose down -v && docker-compose up -d",
-    "db:phpmyadmin": "echo 'Acesse http://localhost:8080 para o phpMyAdmin'"
+    "db:reset": "docker-compose down -v && docker-compose up -d && node scripts/init.sql"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "lovio",
+    "presente",
+    "site",
+    "personalizado",
+    "mercado-pago",
+    "react",
+    "nodejs",
+    "mysql"
+  ],
+  "author": "Lovio Team",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase": "^11.9.1",
-    "mercadopago": "^2.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "sequelize": "^6.35.1",
-    "styled-components": "^6.1.1"
+    "sequelize": "^6.35.0",
+    "mercadopago": "^2.0.7",
+    "uuid": "^9.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
-    "concurrently": "^9.1.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.2",
+    "concurrently": "^8.2.2"
   }
 }
