--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server.js",
     "dev:client": "cd client && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm install && npm run build",
     "install:all": "npm install && cd client && npm install",
+    "postinstall": "cd client && npm install",
     "db:up": "docker-compose up -d",
     "db:down": "docker-compose down",
     "db:restart": "docker-compose restart",
@@ -42,5 +43,9 @@
   "devDependencies": {
     "nodemon": "^3.0.2",
     "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
